# Public-Place

./: .gitignore  00_START_HERE.md  Dockerfile.backend  Dockerfile.frontend  README.md  RENDER_DEPLOYMENT_READY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  audit.py  blog.py  contact.py  health.py  opay_payments.py  payments.py
backend/app/core/: config.py  deps.py  logging.py
backend/app/crud/: audit_request.py  base.py  lead.py
backend/app/models/: audit_request.py  base.py  blog.py  client.py  lead.py  opay_payment.py
backend/app/schemas/: audit_request.py  lead.py
backend/app/services/: email.py  receipt.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(public)/: page.tsx
frontend/src/app/about/: layout.tsx  page.tsx
frontend/src/app/audit/: layout.tsx  page.tsx
frontend/src/app/blog/: layout.tsx  page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/pages/: AboutPageClient.tsx  AdminDashboardClient.tsx  CheckoutPageClient.tsx  CheckoutSuccessPageClient.tsx  HomePageClient.tsx  PricingPageClient.tsx  ServicesPageClient.tsx
frontend/src/components/sections/: CTA.tsx  FAQ.tsx  FeaturedCaseStudy.tsx  ServiceCard.tsx  (+2 more)
frontend/src/lib/: blog-data.ts
frontend/src/styles/: globals.css
(+17 files in other folders)
