[tool.poetry]
name = "nerdpace-backend"
version = "1.0.0"
description = "NerdPace API - Technical SEO Agency Platform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
python-jose = "^3.3.0"
passlib = "^1.7.0"
python-dotenv = "^1.0.0"
sendgrid = "^6.11.0"
stripe = "^7.4.0"
sentry-sdk = "^1.38.0"
redis = "^5.0.0"
aioredis = "^2.0.0"
httpx = "^0.25.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
